@@ -7,6 +7,7 @@ Changes for 1.9
 
 Changes for 1.8.3rc4
 
+ - [ZBX-2803] added detection of the proper type to use in place of socklen_t (asaveljevs)
  - [ZBX-2822] fixed js error on node selection (Aly)
  - [ZBX-2821] fixed reference to removed icons (Vedmak)
  - [ZBX-2784] changed icons style (Vedmak)
